# rodney

./: .gitignore  README.md  claude-code-chrome-proxy.md  demo.md  help.txt  main.go  main_test.go  notes.md  serve.go  serve_test.go  test.sh
notes/assert-command-demo/: README.md
notes/claude-chrome-proxy/: README.md
notes/clear-cache-demo/: README.md  server.py
notes/cookie-management/: README.md  demo.md
notes/rodney-serve/: demo.md  plan.md
python/: pyproject.toml
python/src/rodney/: __init__.py  _types.py  async_browser.py  browser.py
python/tests/: conftest.py  test_async_browser.py  test_browser.py
spa-example/: demo.md  index.html
